2008-07-04  Michael Natterer  <mitch@imendio.com>

	Bug 539944 – Add GtkScaleButton API so struct fields can be marked
	as private

	* gtk/gtk.symbols
	* gtk/gtkscalebutton.[ch]: add gtk_scale_button_get_plus_button()
	and _get_minus_button(). Patch by Christian Dywan.

2008-07-04  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkscalebutton.c:
	* gdk/gdk.symbols: 
	* gdk/gdkwindowimpl.c: Fix make check.

2008-07-03  Matthias Clasen  <mclasen@redhat.com>

	Bug 540618 – gtk_menu_shell_select_first prints warning on GtkMenubar
	constructed using GtkUIManager

	* gtk/gtkmenuitem.c: Fall back to the default positioning when
	the menuitem is not realized. Patch by Björn Lindqvist.

2008-07-03  Matthias Clasen  <mclasen@redhat.com>

	Bug 540612 – mem leak in filechooser

	* gtk/gtkfilesystem.c (get_volumes_list): Fix a memory leak.
	Patch by Christian Persch.

2008-07-04  Tor Lillqvist  <tml@novell.com>

	Bug 540861 - invalid UTF-8 in input device name

	* gdk/win32/gdkinput-win32.c: Fetch the device and cursor names in
	Unicode, and convert to UTF-8 for the GdkDevice's name field.

2008-07-03  Matthias Clasen  <mclasen@redhat.com>

	Bug 538863 – Fixes assertion on entering empty folder

	* gtk/gtkfilechooserdefault.c (browse_files_select_first_row): Don't
	select the first row if the folder is empty.
	Patch by Olle Bergkvist.

2008-07-03  Matthias Clasen  <mclasen@redhat.com>

	Bug 540915 – GtkBuilder sets properties in reverse order

	* gtk/gtkbuilderparser.c (parse_custom): Set properties in the order 
	in which they are specified in the xml file.  

2008-07-03  Matthias Clasen  <mclasen@redhat.com>
	
	Bug 539944 – Add GtkScaleButton API so struct fields can be marked as
	private

	* gtk/gtk.symbols:
	* gtk/gtkscalebutton.[hc] (gtk_scale_button_get_popup): Add an
	accessor for the popup. Patch by Christian Dywan

2008-07-03  Matthias Clasen  <mclasen@redhat.com>

	Bug 535498 – Printing demo broken

	* demos/gtk-demo/printing.c: Use monospace as font name, 